tests/fixtures/LatestTests/BinaryOperationLiteralTests/errors/bool_and_nir.fg
/; EXPECT_ERROR: InvalidBinaryOperationWithTypes
print(true + null)

